--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -91,8 +91,10 @@ RUN chown -R www-data:www-data /var/www
 # Setup Volume
 VOLUME ["/var/www/html"]
 
-# copy ssh keys
+# create directory for ssh keys
 RUN mkdir /var/www/.ssh/
+RUN chown -R www-data:www-data /var/www/.ssh/
+RUN chmod -R 600 /var/www/.ssh/
 
 WORKDIR /var/www/html
 
